temp spacing fix

--- a/codeprojects/style.css
+++ b/codeprojects/style.css
@@ -12,5 +12,4 @@
   position: relative;
   width:100%;
   height: 100%;
-  padding-bottom: 15px;
 }
